# TufaMath

./: .gitignore  README.md  dev.yaml  main.py  pyproject.toml  requirements.txt
scripts/: download_datasets.py  train_distributed.sh
src/: create_dataset.py  dataset.py  model.py  model_config.py  streaming_dataset.py  train.py
