[project]
name = "tufamath-pretrain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.6.0",
    "datasketch>=1.6.5",
    "pyarrow>=20.0.0",
    "sentencepiece>=0.2.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]
