[project]
name = "tufamath-pretrain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.6.0",
    "datasketch>=1.6.5",
    "pyarrow>=20.0.0",
    "sentencepiece>=0.2.0",
    "torch>=2.5.0",
    "transformers>=4.52.4",
    "wandb>=0.16.0",
    "accelerate>=0.25.0",
    "numpy>=1.24.0",
    "tokenizers>=0.15.0",
    "packaging>=21.0",
    "tqdm>=4.64.0",
    "psutil>=5.9.0",
    "pynvml>=11.4.1",
]
